bynkc/tests/fixtures/positive/03_refined_int_positive/input.karn
commons demo {
  type Count = Int where Positive
}
