bynkc/tests/fixtures/negative/13_reserved_keyword/input.karn
commons demo {
  type type = Int
}
